@@ -21,7 +21,6 @@ import java.lang.invoke.MethodHandles;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
@@ -105,6 +104,8 @@ public class NodeConfig {
 
   private final int replayUpdatesThreads;
 
+  private final int indexSearcherExecutorThreads;
+
   @Deprecated private final int transientCacheSize;
 
   private final boolean useSchemaCache;
@@ -144,6 +145,7 @@ public class NodeConfig {
       CloudConfig cloudConfig,
       Integer coreLoadThreads,
       int replayUpdatesThreads,
+      int indexSearcherExecutorThreads,
       int transientCacheSize,
       boolean useSchemaCache,
       String managementPath,
@@ -183,6 +185,7 @@ public class NodeConfig {
     this.cloudConfig = cloudConfig;
     this.coreLoadThreads = coreLoadThreads;
     this.replayUpdatesThreads = replayUpdatesThreads;
+    this.indexSearcherExecutorThreads = indexSearcherExecutorThreads;
     this.transientCacheSize = transientCacheSize;
     this.useSchemaCache = useSchemaCache;
     this.managementPath = managementPath;
@@ -303,7 +306,7 @@ public class NodeConfig {
       log.debug("solr.install.dir property not initialized.");
       return null;
     }
-    return Paths.get(prop);
+    return Path.of(prop);
   }
 
   /**
@@ -333,6 +336,10 @@ public class NodeConfig {
 
   public int getReplayUpdatesThreads() {
     return replayUpdatesThreads;
+  }
+
+  public int getIndexSearcherExecutorThreads() {
+    return indexSearcherExecutorThreads;
   }
 
   /**
@@ -597,6 +604,7 @@ public class NodeConfig {
     private CloudConfig cloudConfig;
     private int coreLoadThreads = DEFAULT_CORE_LOAD_THREADS;
     private int replayUpdatesThreads = Runtime.getRuntime().availableProcessors();
+    private int indexSearcherExecutorThreads = DEFAULT_INDEX_SEARCHER_EXECUTOR_THREADS;
     @Deprecated private int transientCacheSize = -1;
     private boolean useSchemaCache = false;
     private String managementPath;
@@ -617,6 +625,8 @@ public class NodeConfig {
     public static final int DEFAULT_CORE_LOAD_THREADS = 3;
     // No:of core load threads in cloud mode is set to a default of 8
     public static final int DEFAULT_CORE_LOAD_THREADS_IN_CLOUD = 8;
+
+    public static final int DEFAULT_INDEX_SEARCHER_EXECUTOR_THREADS = 0;
 
     private static final String DEFAULT_CORESLOCATORCLASS =
         "org.apache.solr.core.CorePropertiesLocator";
@@ -752,6 +762,11 @@ public class NodeConfig {
 
     public NodeConfigBuilder setReplayUpdatesThreads(int replayUpdatesThreads) {
       this.replayUpdatesThreads = replayUpdatesThreads;
+      return this;
+    }
+
+    public NodeConfigBuilder setIndexSearcherExecutorThreads(int indexSearcherExecutorThreads) {
+      this.indexSearcherExecutorThreads = indexSearcherExecutorThreads;
       return this;
     }
 
@@ -904,6 +919,7 @@ public class NodeConfig {
           cloudConfig,
           coreLoadThreads,
           replayUpdatesThreads,
+          indexSearcherExecutorThreads,
           transientCacheSize,
           useSchemaCache,
           managementPath,
