@@ -17,25 +17,22 @@
 package org.apache.solr.cli;
 
 import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.Closeable;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.PrintStream;
 import java.lang.invoke.MethodHandles;
 import java.net.ServerSocket;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import org.apache.commons.exec.CommandLine;
 import org.apache.commons.exec.DefaultExecutor;
 import org.apache.commons.exec.ExecuteResultHandler;
 import org.apache.lucene.tests.util.LuceneTestCase;
@@ -56,7 +53,7 @@ import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/** Tests the SolrCLI.RunExampleTool implementation that supports bin/solr -e [example] */
+/** Tests the SolrCLI.RunExampleTool implementation that supports bin/solr start -e [example] */
 @SolrTestCaseJ4.SuppressSSL(bugUrl = "https://issues.apache.org/jira/browse/SOLR-5776")
 public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
 
@@ -66,7 +63,7 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
   public static void beforeClass() {
     assumeFalse(
         "FIXME: This test does not work with whitespace in CWD (https://issues.apache.org/jira/browse/SOLR-8877)",
-        Paths.get(".").toAbsolutePath().toString().contains(" "));
+        Path.of(".").toAbsolutePath().toString().contains(" "));
     // to be true
     System.setProperty("solr.directoryFactory", "solr.NRTCachingDirectoryFactory");
   }
@@ -82,15 +79,9 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
    */
   private static class RunExampleExecutor extends DefaultExecutor implements Closeable {
 
-    private PrintStream stdout;
-    private List<org.apache.commons.exec.CommandLine> commandsExecuted = new ArrayList<>();
+    private final List<CommandLine> commandsExecuted = new ArrayList<>();
     private MiniSolrCloudCluster solrCloudCluster;
     private JettySolrRunner standaloneSolr;
-
-    RunExampleExecutor(PrintStream stdout) {
-      super();
-      this.stdout = stdout;
-    }
 
     /**
      * Override the call to execute a command asynchronously to occur synchronously during a unit
@@ -114,14 +105,18 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
       if (exe.endsWith("solr")) {
         String[] args = cmd.getArguments();
         if ("start".equals(args[0])) {
-          if (!hasFlag("-cloud", args) && !hasFlag("-c", args)) return startStandaloneSolr(args);
+          if (hasFlag("--user-managed", args)) {
+            return startStandaloneSolr(args);
+          }
 
-          String solrHomeDir = getArg("-s", args);
+          String solrHomeDir = getArg("--solr-home", args);
           int port = Integer.parseInt(getArg("-p", args));
-          String solrxml =
-              new String(
-                  Files.readAllBytes(Paths.get(solrHomeDir).resolve("solr.xml")),
-                  Charset.defaultCharset());
+          Path solrXmlPath = Path.of(solrHomeDir).resolve("solr.xml");
+          if (!Files.exists(solrXmlPath)) {
+            String solrServerDir = getArg("--server-dir", args);
+            solrXmlPath = Path.of(solrServerDir).resolve("solr").resolve("solr.xml");
+          }
+          String solrxml = Files.readString(solrXmlPath, Charset.defaultCharset());
 
           JettyConfig jettyConfig = JettyConfig.builder().setPort(port).build();
           try {
@@ -224,13 +219,13 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
 
       int port = Integer.parseInt(getArg("-p", args));
 
-      File solrHomeDir = new File(getArg("-s", args));
+      Path solrHomeDir = Path.of(getArg("--solr-home", args));
 
       System.setProperty("host", "localhost");
       System.setProperty("jetty.port", String.valueOf(port));
       System.setProperty("solr.log.dir", createTempDir("solr_logs").toString());
 
-      standaloneSolr = new JettySolrRunner(solrHomeDir.getAbsolutePath(), port);
+      standaloneSolr = new JettySolrRunner(solrHomeDir.toString(), port);
       Thread bg =
           new Thread() {
             @Override
@@ -316,31 +311,30 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
   }
 
   @Test
-  @LuceneTestCase.Nightly
   public void testTechproductsExample() throws Exception {
     testExample("techproducts");
   }
 
   @Test
-  @LuceneTestCase.Nightly
   public void testSchemalessExample() throws Exception {
     testExample("schemaless");
   }
 
   @Test
-  @LuceneTestCase.Nightly
   public void testFilmsExample() throws Exception {
     testExample("films");
   }
 
   protected void testExample(String exampleName) throws Exception {
-    File solrHomeDir = new File(ExternalPaths.SERVER_HOME);
-    if (!solrHomeDir.isDirectory())
-      fail(solrHomeDir.getAbsolutePath() + " not found and is required to run this test!");
+    // Occasionally we want to test in User Managed mode, not the default SolrCloud mode.
+    String testStandaloneMode = LuceneTestCase.rarely() ? "--user-managed" : "";
+    Path defaultSolrHomeDir = ExternalPaths.SERVER_HOME;
+    if (!Files.isDirectory(defaultSolrHomeDir)) {
+      fail(defaultSolrHomeDir + " not found and is required to run this test!");
+    }
 
-    Path tmpDir = createTempDir();
-    File solrExampleDir = tmpDir.toFile();
-    File solrServerDir = solrHomeDir.getParentFile();
+    Path testSolrHomeDir = createTempDir();
+    Path solrServerDir = defaultSolrHomeDir.getParent();
 
     for (int pass = 0; pass < 2; pass++) {
       // need a port to start the example server on
@@ -353,24 +347,26 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
 
       String[] toolArgs =
           new String[] {
-            "-e", exampleName,
-            "-serverDir", solrServerDir.getAbsolutePath(),
-            "-exampleDir", solrExampleDir.getAbsolutePath(),
-            "-p", String.valueOf(bindPort)
+            "-e",
+            exampleName,
+            "--server-dir",
+            solrServerDir.toString(),
+            "--solr-home",
+            testSolrHomeDir.toString(),
+            "-p",
+            String.valueOf(bindPort),
+            testStandaloneMode
           };
 
       // capture tool output to stdout
-      ByteArrayOutputStream baos = new ByteArrayOutputStream();
-      PrintStream stdoutSim = new PrintStream(baos, true, StandardCharsets.UTF_8.name());
+      CLITestHelper.TestingRuntime runtime = new CLITestHelper.TestingRuntime(true);
 
-      RunExampleExecutor executor = new RunExampleExecutor(stdoutSim);
+      RunExampleExecutor executor = new RunExampleExecutor();
       closeables.add(executor);
 
-      RunExampleTool tool = new RunExampleTool(executor, System.in, stdoutSim);
+      RunExampleTool tool = new RunExampleTool(executor, System.in, runtime);
       try {
-        int status =
-            tool.runTool(
-                SolrCLI.processCommandLineArgs(tool.getName(), tool.getOptions(), toolArgs));
+        int status = tool.runTool(SolrCLI.processCommandLineArgs(tool, toolArgs));
 
         if (status == -1) {
           // maybe it's the port, try again
@@ -378,9 +374,7 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
             bindPort = socket.getLocalPort();
           }
           Thread.sleep(100);
-          status =
-              tool.runTool(
-                  SolrCLI.processCommandLineArgs(tool.getName(), tool.getOptions(), toolArgs));
+          status = tool.runTool(SolrCLI.processCommandLineArgs(tool, toolArgs));
         }
 
         assertEquals("it should be ok " + tool + " " + Arrays.toString(toolArgs), 0, status);
@@ -388,28 +382,18 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
         log.error(
             "RunExampleTool failed due to: {}; stdout from tool prior to failure: {}",
             e,
-            baos.toString(StandardCharsets.UTF_8.name())); // nowarn
+            runtime.getOutput()); // nowarn
         throw e;
       }
 
-      String toolOutput = baos.toString(StandardCharsets.UTF_8.name());
+      String toolOutput = runtime.getOutput();
 
       // dump all the output written by the SolrCLI commands to stdout
       // System.out.println("\n\n"+toolOutput+"\n\n");
 
-      File exampleSolrHomeDir = new File(solrExampleDir, exampleName + "/solr");
-      assertTrue(
-          exampleSolrHomeDir.getAbsolutePath()
-              + " not found! run "
-              + exampleName
-              + " example failed; output: "
-              + toolOutput,
-          exampleSolrHomeDir.isDirectory());
-
       if ("techproducts".equals(exampleName)) {
-        SolrClient solrClient =
-            getHttpSolrClient("http://localhost:" + bindPort + "/solr/" + exampleName);
-        try {
+        try (SolrClient solrClient =
+            getHttpSolrClient("http://localhost:" + bindPort + "/solr", exampleName)) {
           SolrQuery query = new SolrQuery("*:*");
           QueryResponse qr = solrClient.query(query);
           long numFound = qr.getResults().getNumFound();
@@ -425,16 +409,14 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
             numFound = solrClient.query(query).getResults().getNumFound();
           }
           assertEquals(
-              "expected 32 docs in the "
+              "expected 31 docs in the "
                   + exampleName
                   + " example but found "
                   + numFound
                   + ", output: "
                   + toolOutput,
-              32,
+              31,
               numFound);
-        } finally {
-          solrClient.close();
         }
       }
 
@@ -446,24 +428,23 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
   /**
    * Tests the interactive SolrCloud example; we cannot test the non-interactive because we need
    * control over the port and can only test with one node since the test relies on setting the host
-   * and jetty.port system properties, i.e. there is no test coverage for the -noprompt option.
+   * and jetty.port system properties, i.e. there is no test coverage for the --no-prompt option.
    */
   @Test
   public void testInteractiveSolrCloudExample() throws Exception {
-    File solrHomeDir = new File(ExternalPaths.SERVER_HOME);
-    if (!solrHomeDir.isDirectory())
-      fail(solrHomeDir.getAbsolutePath() + " not found and is required to run this test!");
+    Path solrHomeDir = ExternalPaths.SERVER_HOME;
+    if (!Files.isDirectory(solrHomeDir))
+      fail(solrHomeDir + " not found and is required to run this test!");
 
-    Path tmpDir = createTempDir();
-    File solrExampleDir = tmpDir.toFile();
+    Path solrExampleDir = createTempDir();
 
-    File solrServerDir = solrHomeDir.getParentFile();
+    Path solrServerDir = solrHomeDir.getParent();
 
     String[] toolArgs =
         new String[] {
-          "-example", "cloud",
-          "-serverDir", solrServerDir.getAbsolutePath(),
-          "-exampleDir", solrExampleDir.getAbsolutePath()
+          "--example", "cloud",
+          "--server-dir", solrServerDir.toString(),
+          "--example-dir", solrExampleDir.toString()
         };
 
     int bindPort = -1;
@@ -481,29 +462,28 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
     InputStream userInputSim = new ByteArrayInputStream(userInput.getBytes(StandardCharsets.UTF_8));
 
     // capture tool output to stdout
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    PrintStream stdoutSim = new PrintStream(baos, true, StandardCharsets.UTF_8.name());
+    CLITestHelper.TestingRuntime runtime = new CLITestHelper.TestingRuntime(true);
 
-    RunExampleExecutor executor = new RunExampleExecutor(stdoutSim);
+    RunExampleExecutor executor = new RunExampleExecutor();
     closeables.add(executor);
 
-    RunExampleTool tool = new RunExampleTool(executor, userInputSim, stdoutSim);
+    RunExampleTool tool = new RunExampleTool(executor, userInputSim, runtime);
     try {
-      tool.runTool(SolrCLI.processCommandLineArgs(tool.getName(), tool.getOptions(), toolArgs));
+      tool.runTool(SolrCLI.processCommandLineArgs(tool, toolArgs));
     } catch (Exception e) {
       System.err.println(
           "RunExampleTool failed due to: "
               + e
               + "; stdout from tool prior to failure: "
-              + baos.toString(StandardCharsets.UTF_8.name()));
+              + runtime.getOutput());
       throw e;
     }
 
-    String toolOutput = baos.toString(StandardCharsets.UTF_8.name());
+    String toolOutput = runtime.getOutput();
 
     // verify Solr is running on the expected port and verify the collection exists
     String solrUrl = "http://localhost:" + bindPort + "/solr";
-    if (!SolrCLI.safeCheckCollectionExists(solrUrl, collectionName, null)) {
+    if (!CLIUtils.safeCheckCollectionExists(solrUrl, collectionName, null)) {
       fail(
           "After running Solr cloud example, test collection '"
               + collectionName
@@ -542,19 +522,15 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
       }
     }
 
-    File node1SolrHome = new File(solrExampleDir, "cloud/node1/solr");
-    if (!node1SolrHome.isDirectory()) {
-      fail(
-          node1SolrHome.getAbsolutePath()
-              + " not found! run cloud example failed; tool output: "
-              + toolOutput);
+    Path node1SolrHome = solrExampleDir.resolve("cloud/node1/solr");
+    if (!Files.isDirectory(node1SolrHome)) {
+      fail(node1SolrHome + " not found! run cloud example failed; tool output: " + toolOutput);
     }
 
     // delete the collection
-    DeleteTool deleteTool = new DeleteTool(stdoutSim);
-    String[] deleteArgs = new String[] {"-name", collectionName, "-solrUrl", solrUrl};
-    deleteTool.runTool(
-        SolrCLI.processCommandLineArgs(deleteTool.getName(), deleteTool.getOptions(), deleteArgs));
+    DeleteTool deleteTool = new DeleteTool(runtime);
+    String[] deleteArgs = new String[] {"--name", collectionName, "--solr-url", solrUrl};
+    deleteTool.runTool(SolrCLI.processCommandLineArgs(deleteTool, deleteArgs));
 
     // dump all the output written by the SolrCLI commands to stdout
     // System.out.println(toolOutput);
@@ -565,13 +541,12 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
 
   @Test
   public void testFailExecuteScript() throws Exception {
-    File solrHomeDir = new File(ExternalPaths.SERVER_HOME);
-    if (!solrHomeDir.isDirectory())
-      fail(solrHomeDir.getAbsolutePath() + " not found and is required to run this test!");
+    Path solrHomeDir = ExternalPaths.SERVER_HOME;
+    if (!Files.isDirectory(solrHomeDir))
+      fail(solrHomeDir + " not found and is required to run this test!");
 
-    Path tmpDir = createTempDir();
-    File solrExampleDir = tmpDir.toFile();
-    File solrServerDir = solrHomeDir.getParentFile();
+    Path solrExampleDir = createTempDir();
+    Path solrServerDir = solrHomeDir.getParent();
 
     // need a port to start the example server on
     int bindPort = -1;
@@ -579,29 +554,27 @@ public class TestSolrCLIRunExample extends SolrTestCaseJ4 {
       bindPort = socket.getLocalPort();
     }
 
-    File toExecute = new File(tmpDir.toString(), "failExecuteScript");
-    assertTrue(
-        "Should have been able to create file '" + toExecute.getAbsolutePath() + "' ",
-        toExecute.createNewFile());
+    Path toExecute = Path.of(solrExampleDir.toString(), "failExecuteScript");
+    try {
+      Files.createFile(toExecute);
+    } catch (IOException e) {
+      throw new IOException("Should have been able to create file '" + toExecute + "' ");
+    }
 
     String[] toolArgs =
         new String[] {
           "-e", "techproducts",
-          "-serverDir", solrServerDir.getAbsolutePath(),
-          "-exampleDir", solrExampleDir.getAbsolutePath(),
+          "--server-dir", solrServerDir.toString(),
+          "--example-dir", solrExampleDir.toString(),
           "-p", String.valueOf(bindPort),
-          "-script", toExecute.getAbsolutePath().toString()
+          "--script", toExecute.toString(),
         };
 
-    // capture tool output to stdout
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    PrintStream stdoutSim = new PrintStream(baos, true, StandardCharsets.UTF_8.name());
+    DefaultExecutor executor = DefaultExecutor.builder().get();
 
-    DefaultExecutor executor = new DefaultExecutor();
-
-    RunExampleTool tool = new RunExampleTool(executor, System.in, stdoutSim);
-    int code =
-        tool.runTool(SolrCLI.processCommandLineArgs(tool.getName(), tool.getOptions(), toolArgs));
+    ToolRuntime runtime = new CLITestHelper.TestingRuntime(false);
+    RunExampleTool tool = new RunExampleTool(executor, System.in, runtime);
+    int code = tool.runTool(SolrCLI.processCommandLineArgs(tool, toolArgs));
     assertEquals("Execution should have failed with return code 1", 1, code);
   }
 }
